--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -211,7 +211,131 @@
             </RelativeLayout>
         </LinearLayout>
     </ScrollView>
+    
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="205dp"
+            android:layout_marginLeft="50dp"
+            android:background="#aaaaaa"
+            android:text="1"
+            android:textSize="32dp"
+            android:textColor="#000000" />
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="205dp"
+            android:background="#aaaaaa"
+            android:text="2"
+            android:textSize="32dp"
+            android:textColor="#000000" />
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="205dp"
+            android:layout_marginRight="50dp"
+            android:background="#aaaaaa"
+            android:text="3"
+            android:textSize="32dp"
+            android:textColor="#000000" />
 
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="265dp"
+            android:layout_marginLeft="50dp"
+            android:background="#aaaaaa"
+            android:text="4"
+            android:textSize="32dp"
+            android:textColor="#000000" />
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="265dp"
+            android:background="#aaaaaa"
+            android:text="5"            
+            android:textSize="32dp"
+            android:textColor="#000000" />
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="265dp"
+            android:layout_marginRight="50dp"
+            android:background="#aaaaaa"
+            android:text="6"
+            android:textSize="32dp"
+            android:textColor="#000000" />
+
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="325dp"
+            android:layout_marginLeft="50dp"
+            android:background="#aaaaaa"
+            android:text="7"
+            android:textSize="32dp"
+            android:textColor="#000000" />
+        <Button
+            android:id="@+id/button8"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="325dp"
+            android:background="#aaaaaa"
+            android:text="8"
+            android:textSize="32dp"
+            android:textColor="#000000" />
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="325dp"
+            android:layout_marginRight="50dp"
+            android:background="#aaaaaa"
+            android:text="9"
+            android:textSize="32dp"
+            android:textColor="#000000" />
+        <Button
+            android:id="@+id/button0"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="385dp"
+            android:background="#aaaaaa"
+            android:text="0"
+            android:textSize="32dp"
+            android:textColor="#000000" />
+        
+    </RelativeLayout>
+    
     <Button
         android:id="@+id/buttonRecord"
         android:layout_width="match_parent"
@@ -219,7 +343,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:background="#fff"
+        android:background="#ffffff"
         android:text="@string/recordButtonStart"
         android:textColor="@color/blue" />
 
